--- a/AppReviews/Base.lproj/Main.storyboard
+++ b/AppReviews/Base.lproj/Main.storyboard
@@ -458,7 +458,7 @@
                                 <action selector="saveReviewClicked:" target="XfG-lQ-9wD" id="qVA-bP-cGc"/>
                             </connections>
                         </menuItem>
-                        <menuItem title="Share..." id="h6h-fH-hv6" userLabel="Save as...">
+                        <menuItem title="Share..." id="h6h-fH-hv6">
                             <modifierMask key="keyEquivalentModifierMask"/>
                             <connections>
                                 <action selector="shareSelectedReview:" target="XfG-lQ-9wD" id="cc8-rd-Cbs"/>
